--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f70f5b86c90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fddf97d3e10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f70f5bd0550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f70f5bd0750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fddf980e4d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fddf980e6d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f70f612fdd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f70f612ffd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fddf9d7cd10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fddf9d7cf10&gt;]</pre>
 </div>
 
 </div>
