--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f26168fe310&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe0b37905d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f26169394d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f26169396d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe0b37d9490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe0b37d9690&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2616ea9d50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2616ea9f50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe0b3d37e10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe0b3d37fd0&gt;]</pre>
 </div>
 
 </div>
