--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1fc0ac8c90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe961fa3050&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1fc0b04e90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1fc0b04bd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe962040f50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe962040d90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1fc1075d50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1fc1075f90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe962294cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe962294ed0&gt;]</pre>
 </div>
 
 </div>
