--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f06b7f64bd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f40d18aeed0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f06b7c6da90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f06b7c6ded0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f40d18df690&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f40d18dfbd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f06b81ddc10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f06b81dde10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f40d1e4ed10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f40d1e4ef10&gt;]</pre>
 </div>
 
 </div>
