--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f43a9842050&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1b6c8d1190&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f43a9b23250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f43a9b23450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1b6c5f0390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1b6c5f0590&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f43aa0e0ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f43aa0e0cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1b6ce90d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1b6ce90f50&gt;]</pre>
 </div>
 
 </div>
