--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdf46730090&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5588e1ff90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdf46445350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdf46445550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5588e4b310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5588e4b510&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdf469bfbd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdf469bfdd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f55890a3c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f55890a3e50&gt;]</pre>
 </div>
 
 </div>
