--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcca9f761d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9b36d91150&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcca9c81350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcca9c81550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9b36a90390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9b36a90590&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fccaa1f0c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fccaa1f0e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9b3700bc90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9b3700be90&gt;]</pre>
 </div>
 
 </div>
