--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7efeceac9050&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb80ae60d90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7efecee213d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7efecee215d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb80ab6b2d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb80ab6b4d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7efecf39cc50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7efecf39ce50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb80b0e5b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb80b0e5d90&gt;]</pre>
 </div>
 
 </div>
