--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb80ae60d90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9d939f7fd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb80ab6b2d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb80ab6b4d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9d93a5f2d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9d93a5f4d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb80b0e5b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb80b0e5d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9d93fcebd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9d93fcedd0&gt;]</pre>
 </div>
 
 </div>
