--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc3dd410450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f218d385210&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc3dcddf410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc3dcddf610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f218d3c3410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f218d3c3610&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc3dd35ac90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc3dd35ae90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f218d92fd10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f218d92ff10&gt;]</pre>
 </div>
 
 </div>
