--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe4c41c6050&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7db771fe10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe4c3ecc350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe4c3ecc550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7db7750a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7db7750450&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe4c4447b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe4c4447d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7db7cbfb50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7db7cbf950&gt;]</pre>
 </div>
 
 </div>
