--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7b99bb1890&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f259f4a2910&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7b98d1c4d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7b98d1c6d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f259f8da390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f259f8da590&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7b99278e10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7b99278fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f259fe55c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f259fe55e10&gt;]</pre>
 </div>
 
 </div>
