--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa6ffc4fd10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1216c38950&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa6ff62c410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa6ff62c610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1216936390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f12169365d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa6ffed7c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa6ffed7e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1216eb1d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1216eb1f90&gt;]</pre>
 </div>
 
 </div>
