--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8345ce17d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff1b350d910&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f83459fb8d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f83459fbb10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff1b353c350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff1b353c550&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8345f69bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8345f69e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff1b3ab5c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff1b3ab5e50&gt;]</pre>
 </div>
 
 </div>
