--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2b3323af50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f018e2ae8d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2b332692d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2b332694d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f018e31d590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f018e31d790&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2b337e8bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2b337e8dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f018e87be90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f018e8860d0&gt;]</pre>
 </div>
 
 </div>
