--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6f5ff72d10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6c5e7d3fd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6f5fc39410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6f5fc39610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6c5e4feb50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6c5e4fd290&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6f60200cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6f60200ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6c5eaaed50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6c5eaa9a90&gt;]</pre>
 </div>
 
 </div>
