--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f54edcbc5d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2657674590&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f54edd1b990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f54edd1bd90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f26576e3550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f26576e3750&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f54ee28cc50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f54ee28ce50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2657c43d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2657c43f50&gt;]</pre>
 </div>
 
 </div>
